--- a/scss/classes.scss
+++ b/scss/classes.scss
@@ -1,136 +1,136 @@
 .wicked {
-    &-fade-In {
-        animation-name: fade-In;
+    &-fadeIn {
+        animation-name: fadeIn;
         animation-duration: 1s;
     }
 
-    &-fade-In-Top {
-        animation-name: fade-In-Top;
+    &-fadeInTop {
+        animation-name: fadeInTop;
         animation-duration: 1s;
     }
 
-    &-fade-In-Bottom {
-        animation-name: fade-In-Bottom;
+    &-fadeInBottom {
+        animation-name: fadeInBottom;
         animation-duration: 1s;
     }
 
-    &-fade-In-Left {
-        animation-name: fade-In-Left;
+    &-fadeInLeft {
+        animation-name: fadeInLeft;
         animation-duration: 1s;
     }
 
-    &-fade-In-Right {
-        animation-name: fade-In-Right;
+    &-fadeInRight {
+        animation-name: fadeInRight;
         animation-duration: 1s;
     }
 
-    &-fade-Out {
-        animation-name: fade-Out;
+    &-fadeOut {
+        animation-name: fadeOut;
         animation-duration: 1s;
     }
 
-    &-fade-Out-Top {
-        animation-name: fade-Out-Top;
+    &-fadeOutTop {
+        animation-name: fadeOutTop;
         animation-duration: 1s;
     }
 
-    &-fade-Out-Bottom {
-        animation-name: fade-Out-Bottom;
+    &-fadeOutBottom {
+        animation-name: fadeOutBottom;
         animation-duration: 1s;
     }
 
-    &-fade-Out-Left {
-        animation-name: fade-Out-Left;
+    &-fadeOutLeft {
+        animation-name: fadeOutLeft;
         animation-duration: 1s;
     }
 
-    &-fade-Out-Right {
-        animation-name: fade-Out-Right;
+    &-fadeOutRight {
+        animation-name: fadeOutRight;
         animation-duration: 1s;
     }
 
-    &-shake-X {
-        animation-name: shake-X;
+    &-shakeX {
+        animation-name: shakeX;
         animation-duration: 1s;
     }
 
-    &-shake-Y {
-        animation-name: shake-Y;
+    &-shakeY {
+        animation-name: shakeY;
         animation-duration: 1s;
     }
 
-    &-jump-In-Top {
-        animation-name: jump-In-Top;
+    &-jumpInTop {
+        animation-name: jumpInTop;
         animation-duration: 1s;
     }
 
-    &-jump-In-Bottom {
-        animation-name: jump-In-Bottom;
+    &-jumpInBottom {
+        animation-name: jumpInBottom;
         animation-duration: 1s;
     }
 
-    &-jump-In-Left {
-        animation-name: jump-In-Left;
+    &-jumpInLeft {
+        animation-name: jumpInLeft;
         animation-duration: 1s;
     }
 
-    &-jump-In-Right {
-        animation-name: jump-In-Right;
+    &-jumpInRight {
+        animation-name: jumpInRight;
         animation-duration: 1s;
     }
 
-    &-jump-Out-Top {
-        animation-name: jump-Out-Top;
+    &-jumpOutTop {
+        animation-name: jumpOutTop;
         animation-duration: 1s;
     }
 
-    &-jump-Out-Bottom {
-        animation-name: jump-Out-Bottom;
+    &-jumpOutBottom {
+        animation-name: jumpOutBottom;
         animation-duration: 1s;
     }
 
-    &-jump-Out-Left {
-        animation-name: jump-Out-Left;
+    &-jumpOutLeft {
+        animation-name: jumpOutLeft;
         animation-duration: 1s;
     }
 
-    &-jump-Out-Right {
-        animation-name: jump-Out-Right;
+    &-jumpOutRight {
+        animation-name: jumpOutRight;
         animation-duration: 1s;
     }
 
-    &-bounce-In {
-        animation-name: bounce-In;
+    &-bounceIn {
+        animation-name: bounceIn;
         animation-duration: 1s;
     }
 
-    &-bounce-Out {
-        animation-name: bounce-Out;
+    &-bounceOut {
+        animation-name: bounceOut;
         animation-duration: 1s;
     }
 
-    &-rotate-X {
-        animation-name: rotate-X;
+    &-rotateX {
+        animation-name: rotateX;
         animation-duration: 1s;
     }
 
-    &-rotate-Y {
-        animation-name: rotate-Y;
+    &-rotateY {
+        animation-name: rotateY;
         animation-duration: 1s;
     }
 
-    &-rotate-Z {
-        animation-name: rotate-Z;
+    &-rotateZ {
+        animation-name: rotateZ;
         animation-duration: 1s;
     }
 
-    &-spin-In {
-        animation-name: spin-In;
+    &-spinIn {
+        animation-name: spinIn;
         animation-duration: 1s;
     }
 
-    &-spin-Out {
-        animation-name: spin-Out;
+    &-spinOut {
+        animation-name: spinOut;
         animation-duration: 1s;
     }
 }
