--- a/scss/delay.scss
+++ b/scss/delay.scss
@@ -1,39 +1,14 @@
-.delay-100 {
-    animation-delay: 0.1s;
-}
-
-.delay-200 {
-    animation-delay: 0.2s;
-}
-
-.delay-300 {
-    animation-delay: 0.3s;
-}
-
-.delay-400 {
-    animation-delay: 0.4s;
-}
-
-.delay-500 {
-    animation-delay: 0.5s;
-}
-
-.delay-600 {
-    animation-delay: 0.6s;
-}
-
-.delay-700 {
-    animation-delay: 0.7s;
-}
-
-.delay-800 {
-    animation-delay: 0.8s;
-}
-
-.delay-900 {
-    animation-delay: 0.9s;
-}
-
-.delay-1000 {
-    animation-delay: 1s;
-}
+.delay-100 {animation-delay: 0.1s;}
+.delay-200 {animation-delay: 0.2s;}
+.delay-300 {animation-delay: 0.3s;}
+.delay-400 {animation-delay: 0.4s;}
+.delay-500 {animation-delay: 0.5s;}
+.delay-600 {animation-delay: 0.6s;}
+.delay-700 {animation-delay: 0.7s;}
+.delay-800 {animation-delay: 0.8s;}
+.delay-900 {animation-delay: 0.9s;}
+.delay-1000 {animation-delay: 1s;}
+.delay-1500{animation-delay: 1.5s;}
+.delay-2000 {animation-delay: 2s;}
+.delay-2500 {animation-delay: 2.5s;}
+.delay-3000 {animation-delay: 3s;}
