--- a/scss/classes.scss
+++ b/scss/classes.scss
@@ -199,4 +199,9 @@
         animation-duration: 1s;
     }
 
+    &-blurOutRight {
+        animation-name: blurOutRight;
+        animation-duration: 1s;
+    }
+
 }
