--- a/scss/keyframes.scss
+++ b/scss/keyframes.scss
@@ -546,8 +546,6 @@
 
 @keyframes blurOutLeft {
     0% {
-        opacity: 1;
-        transform: translateX(0);
         filter: blur(20px);
     }
 
@@ -558,5 +556,20 @@
     100% {
         opacity: 0;
         transform: translateX(-50px);
+    }
+}
+
+@keyframes blurOutRight {
+    0% {
+        filter: blur(20px);
+    }
+
+    50% {
+        opacity: 0.3;
+    }
+
+    100% {
+        opacity: 0;
+        transform: translate(50px);
     }
 }
