--- a/scss/keyframes.scss
+++ b/scss/keyframes.scss
@@ -405,7 +405,7 @@
 @keyframes rollOutLeft {
 
     40% {
-        transform: translateX(40px) rotate(-40deg);
+        transform: translateX(40px) rotate(40deg);
         opacity: 1;
     }
 
@@ -572,4 +572,74 @@
         opacity: 0;
         transform: translate(50px);
     }
+}
+
+@keyframes wave {
+    20% {
+        transform: rotate(-40deg);
+        transform-origin: center bottom;
+    }
+
+    40% {
+        transform: rotate(40deg);
+        transform-origin: center bottom;
+    }
+
+    60% {
+        transform: rotate(-40deg);
+        transform-origin: center bottom;
+    }
+
+    80% {
+        transform: rotate(40deg);
+        transform-origin: center bottom;
+    }
+}
+
+@keyframes  blink {
+    0% {opacity: 0;}
+    20% {
+        opacity: 1;
+        transform: scale(1.2);
+    }
+
+    40% {
+        opacity: 0;
+        transform: scale(1)
+    }
+
+    60%{
+        opacity: 1;
+        transform: scale(1.2)
+    }
+
+    80%{
+        opacity: 0;
+        transform: scale(1)
+    }
+
+    100% {
+        opacity: 1;
+    }
+}
+
+@keyframes doorOpen {
+    0% {
+        transform-origin: center right;
+        transform: perspective(300px) rotateY(0deg);
+    }
+
+    100% {
+        transform-origin: center right;
+        transform: perspective(300px) rotateY(180deg);
+    }
+}
+
+@keyframes vanish {
+    100% {
+        opacity: 0;
+        transform-origin: 50% 50%;
+        transform: scale(2);
+        filter: blur(10px);
+      }
 }
