--- a/scss/keyframes.scss
+++ b/scss/keyframes.scss
@@ -141,60 +141,33 @@
 }
 
 @keyframes jumpInTop {
-    0% {
-        opacity: 0;
-        transform: translateY(-200px);
-    }
-
-    50% {
-        opacity: 1;
-        transform: translateY(100px);
-    }
-    75% {
-        transform: translateY(-40px);
-    }
+    0% {transform: translateY(-200px);}
+    50% { transform: translateY(100px); }
+    75% { transform: translateY(-40px);}
 }
 
 @keyframes jumpInBottom {
-    0% {
-        opacity: 0;
-        transform: translateY(200px);
-    }
+    0% { transform: translateY(200px);}
 
-    50% {
-        opacity: 1;
-        transform: translateY(-100px);
-    }
+    50% { transform: translateY(-100px);}
 
-    75% {
-        transform: translateY(40px);
-    }
+    75% {transform: translateY(40px);}
 }
 
 @keyframes jumpInLeft {
-    0% {
-        opacity: 0;
-        transform: translateX(-200px);
-    }
+    0% {transform: translateX(-200px);}
 
-    50% {
-        opacity: 1;
-        transform: translateX(100px);
-    }
+    50% { transform: translateX(100px);}
 
-    70% {
-        transform: translateX(-40px);
-    }
+    70% {transform: translateX(-40px);}
 }
 
 @keyframes jumpInRight {
     0% {
-        opacity: 0;
         transform: translateX(200px);
     }
 
     50% {
-        opacity: 1;
         transform: translateX(-100px);
     }
 
@@ -205,6 +178,7 @@
 
 @keyframes jumpOutTop {
     50% {
+        opacity: 1;
         transform: translateY(100px);
     }
 
@@ -216,6 +190,7 @@
 
 @keyframes jumpOutBottom {
     50% {
+        opacity: 1;
         transform: translateY(-100px);
     }
 
@@ -227,6 +202,7 @@
 
 @keyframes jumpOutLeft {
     50% {
+        opacity: 1;
         transform: translateX(100px);
     }
 
@@ -238,6 +214,7 @@
 
 @keyframes jumpOutRight {
     50% {
+        opacity: 1;
         transform: translateX(-100px);
     }
 
